--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -8,6 +8,8 @@
   height: 100px;
   position: relative;
   padding: 1em;
+  margin: 1em 0;
+  border-radius: 3px;
 }
 
 .profile {
@@ -48,4 +50,11 @@
 .name {
   margin: 0px 1em;
   text-transform: uppercase;
+}
+
+.noUsers {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
